--- a/css/style-index.css
+++ b/css/style-index.css
@@ -16,11 +16,9 @@ html {
 
 body {
   background: rgb(238, 174, 202);
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(180, 203, 230, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(238, 174, 202, 1) 0%,
+      rgba(180, 203, 230, 1) 100%);
 }
 
 main {
@@ -61,4 +59,5 @@ section.introduction {
   max-width: 25%;
   float: left;
   margin: 0 10px;
+  border-radius: 50%;
 }
