--- a/css/style-my-projects.css
+++ b/css/style-my-projects.css
@@ -8,8 +8,48 @@ html {
     box-sizing: inherit;
 }
 
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+body {
+    background: rgb(238, 174, 202);
+    background: radial-gradient(circle,
+            rgba(238, 174, 202, 1) 0%,
+            rgba(180, 203, 230, 1) 100%);
+}
+
+main {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu__page {
+    padding: 10px;
+    text-decoration: none;
+    background-color: thistle;
+    line-height: 26px;
+    font-size: 15px;
+    border: 1px solid slateblue;
+}
+
+.menu__page--homepage {
+    font-weight: bolder;
+}
+
 .grid {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
+}
+
+.project {
+    padding: 5%;
 }
